--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -7,6 +7,7 @@
 <h:head>
 </h:head>
 <h:body>
+	<center>
 	<h3>Vector-X JSF2 Example - Login</h3>
 	<h:form>
 		<h:outputText value="Username:"/>		
@@ -19,5 +20,6 @@
 		<br />
 		<h:outputText value="#{login.mensagem}" />
 	</h:form>
+	</center>
 </h:body>
 </html>
